--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import './tailwind.css'; */
 
 @layer components {
   .primary-btn {
@@ -12,4 +13,12 @@
   .drop-shadow {
     filter: drop-shadow(6px 8px 10px rgba(0, 0, 0, 0.5));
   }
+}
+
+.swiper-pagination-bullet {
+  @apply bg-gray-400 opacity-50;
+}
+
+.swiper-pagination-bullet-active {
+  @apply bg-white;
 }
